--- a/config/application.properties
+++ b/config/application.properties
@@ -8,3 +8,12 @@ management.endpoints.web.base-path=/feat-test
 management.endpoints.web.exposure.include=*
 management.endpoint.shutdown.enabled=true
 management.endpoint.health.enabled=true
+
+spring.redis.host=127.0.0.1
+spring.redis.port=6379
+spring.redis.password=123456
+spring.redis.timeout=1000
+spring.redis.lettuce.pool.max-active=100
+spring.redis.lettuce.pool.max-idle=100
+spring.redis.lettuce.pool.min-idle=50
+spring.redis.lettuce.pool.max-wait=600
