test: for some items

--- a/config/application.properties
+++ b/config/application.properties
@@ -2,18 +2,38 @@ server.port=8081
 
 spring.application.name=feat-test
 
+# log
 logging.config=config/logback-spring.xml
 
+# actuator
 management.endpoints.web.base-path=/feat-test
 management.endpoints.web.exposure.include=*
 management.endpoint.shutdown.enabled=true
 management.endpoint.health.enabled=true
 
+# redis
 spring.redis.host=127.0.0.1
 spring.redis.port=6379
 spring.redis.password=123456
 spring.redis.timeout=1000
+# lettuce
 spring.redis.lettuce.pool.max-active=100
 spring.redis.lettuce.pool.max-idle=100
 spring.redis.lettuce.pool.min-idle=50
 spring.redis.lettuce.pool.max-wait=600
+
+# kafka
+spring.kafka.bootstrap-servers=172.31.231.204:9092,172.31.231.205:9092
+# kafka producer
+spring.kafka.producer.retries=0
+spring.kafka.producer.batch-size=16385
+spring.kafka.producer.buffer-memory=33554432
+spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
+spring.kafka.producer.value-serializer=org.apache.kafka.common.serialization.StringSerializer
+# kafka consumer
+spring.kafka.consumer.group-id=test-consumer-group
+spring.kafka.consumer.auto-offset-reset=earliest
+spring.kafka.consumer.enable-auto-commit=true
+spring.kafka.consumer.auto-commit-interval=100
+spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.StringDeserializer
+spring.kafka.consumer.value-deserializer=org.apache.kafka.common.serialization.StringDeserializer
